code/tui/src/app/fullscreen/snapshots/app__fullscreen__tests__model_pointer_preview.snap
---
source: code/tui/src/app/fullscreen/frame_tests.rs
expression: "render(&app, 100, 18)"
---
  .                                                                            [— / —] [Dashboard]  
                                                                                                    
            ┌── Model ────────────────────────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ Search models                                                      │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
            │  gateway-model                                                 —    —   │             
            │> Unconfigured model                                            —    —   │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
  ──────────│                                                                         │───────────  
  > Build an│  ↑↓ select · / search · p pin · Enter apply · Esc cancel                │             
  ──────────└─────────────────────────────────────────────────────────────────────────┘atic model
