code/tui/src/app/fullscreen/snapshots/app__fullscreen__tests__model_subscription_list.snap
---
source: code/tui/src/app/fullscreen/frame_tests.rs
expression: "render(&app, 100, 18)"
---
  .                                                                               [— / —] [仪 表 盘 ]  
                                                                                                    
            ┌── 模 型  ─────────────────────────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ 搜 索 模 型                                                            │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
            │  已 固 定  ─────────────────────────────────────────────────────────────── │             
            │> Grok Ash                                                               │             
            │                                                                         │             
            │  其 他 模 型  ───────────────────────────────────────────────────────────── │             
            │  GPT-6-Astra                                                            │             
            │  GPT-5.6-Sol                                                            │             
  ╭─────────│                                                                         │──────────╮  
  │ > 构 建 任 │  ↑↓ 选 择  · / 搜 索  · P 固 定 /取 消 固 定  · Enter 应 用  · Esc 取 消              │          │  
  ╰─────────└─────────────────────────────────────────────────────────────────────────┘自 动 模 型  ─╯
