code/tui/src/app/fullscreen/snapshots/app__fullscreen__tests__model_subscription_provider_tabs.snap
---
source: code/tui/src/app/fullscreen/frame_tests.rs
expression: "render(&app, 100, 18)"
---
  .                                                                               [— / —] [仪 表 盘 ]  
                                                                                                    
            ┌── 模 型  ─────────────────────────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │   收 藏     ChatGPT    xAI                                                │             
            │                                                                         │             
            │  GPT-6-Astra                                                            │             
            │  GPT-5.6-Sol                                                            │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
  ╭─────────│                                                                         │──────────╮  
  │ > 构 建 任 │  Tab/Shift+Tab 切 换  · Enter 返 回  · Esc 关 闭                              │          │  
  ╰─────────└─────────────────────────────────────────────────────────────────────────┘自 动 模 型  ─╯
