code/tui/src/app/fullscreen/snapshots/app__fullscreen__tests__policy_top_tip_current_and_next.snap
---
source: code/tui/src/app/fullscreen/frame_tests.rs
expression: visible
---
  .                                                                                                [— / —] [Dashboard]  
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
  ⏸ current: Manual · ⏩  next: Auto                                                      /policy to change permissions  
  ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────  
  >                                                                                                                     
  ─────────────────────────────────────────────────────────────────────────────────────────────────── Automatic model   
                                                                                                                        
  Enter send  ·  shift+tab mode  ·  shift+↓/↑ effort
