code/tui/src/app/fullscreen/snapshots/app__fullscreen__tests__running_tip_after_language_change.snap
---
source: code/tui/src/app/fullscreen/frame_tests.rs
expression: localized
---
  .                                                           [— / —] [仪表盘]  
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
⠋ 正在处理 · 0m 09s 总计 · ctrl+c 可中断                                        
└ 技巧：复杂任务可以请 Ash 先列出步骤                                           
                                                                                
  ────────────────────────────────────────────────────────────────────────────  
  >                                                                             
  ────────────────────────────────────────────────────────────────── 自动模型   
                                                                                
  Enter queue  ·  shift+tab 权限  ·  /home
