code/tui/src/app/fullscreen/snapshots/app__fullscreen__tests__slash_popup_clears_covered_transcript_rows_edge_to_edge.snap
---
source: code/tui/src/app/fullscreen/frame_tests.rs
expression: "render(&app, terminal_area.width, terminal_area.height)"
---
  .                                                        [— / —] [Dashboard]  
                                                                                
● Model invocation failed 8 underlying transcript content underlying transcript 
content underlying transcript content underlying transcript content             
                                                                                
● Model invocation failed 9 underlying transcript content underlying transcript 
content underlying transcript content underlying transcript content             
                                                                                
  ────────────────────────────────────────────────────────────────────── 1/36   
  /status                    show the active session, thread, and model        ┃
  /usage                     show subscription quotas and reset times          │
  /statusline                choose the items shown in the status line         │
  /skills                    browse and manage skills                          │
  /memories                  manage memories, reading consent and model saving │
  /mcp                       list configured MCP tools                         │
  ────────────────────────────────────────────────────────────────────────────  
  > /                                                                           
  ────────────────────────────────────────────────────── Claude Sonnet (high)   
                                                                                
  Enter send
